# cloudshell-user-sync

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  README.MD  changelog_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: lint-test.yml  release_flow.yml
debug/: ldap_handle_debug.py
src/cloudshell_user_sync/: cli.py  cloudshell_sync.py  config_handler.py  constants.py  exceptions.py  ldap3_handler.py  ldap_sync.py  schedule_handler.py  windows_service.py
src/cloudshell_user_sync/actions/: cloudshell_sync.py  ldap_pull.py  ldap_sync.py
src/cloudshell_user_sync/commands/: run_scheduler.py  run_service.py  set_config.py  set_credential.py  set_mapping.py  sync_groups.py  view_config.py
src/cloudshell_user_sync/models/: config.py  cs_config.py  cs_import.py  ldap_config.py
src/cloudshell_user_sync/utility/: config_handler.py  keyring_handler.py  ldap3_handler.py  path_helper.py  rotating_log_handler.py  safe_echo.py  schedule_handler.py  windows_service.py
tests/: conftest.py  env_settings.py  ldap_handle_debug.py  logger_stdout.py  sample_ldap_config.json  sync_config.json  test_cloudshell_sync.py  test_config_handler.py  test_group_calculate.py  test_keyring_handler.py  test_ldap_handler.py
tests/integration/: conftest.py  env_settings.py  logger_stdout.py  readme.MD  test_config_handler.py  test_ldap_handler.py  test_sync.py
tests/unit/: conftest.py  ldap_config.json  test_config_handler.py  test_group_calculate.py
util/: windows_service.py
