[metadata]
name = cloudshell-user-sync
version = file: version.txt
author = QualiLab
author_email = support@quali.com
description = sync Cloudshell groups with AD Groups
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/QualiSystemsLab/cloudshell-user-sync
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    cloudshell-automation-api
    ldap3
    click
    schedule
    dacite
    keyring
    pywin32;platform_system=='Windows'

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	usersync = cloudshell_user_sync.cli:cli